--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ tasks:
     before: |
      source ./bin/set_tf_alias
      source ./bin/install_terraform_cli
-    #  source ./bin/generate_trfc_credentials
+     source ./bin/generate_trfc_credentials
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
