--- a/bin/.env.example
+++ b/bin/.env.example
@@ -1,3 +1,7 @@
 PROJECT_ROOT='/workspace/terraform-beginner-bootcamp-2023'
 #We aren't using this, but someone could look here and see this
 
+# AWS_ACCESS_KEY_ID='heyy'
+# AWS_SECRET_ACCESS_KEY='hey again from here'
+# AWS_DEFAULT_REGION='ca-central-1'
+# TERRAFORM_CLOUD_TOKEN='YOUR SECRET TC CLOUD TOKEN'
