--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,2 +1,4 @@
 user_uuid="5ab644ae-ad4e-4258-b655-bd46ce69829d"
 bucket_name="tflu9hg8iegivh7jewc83syuirzygb2t"
+index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
+error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
