--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -3,3 +3,4 @@ bucket_name="tflu9hg8iegivh7jewc83syuirzygb2t"
 index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
 error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
 content_version=1
+assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets"
